# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.26

  - WL#14205, Support query attributes.

  - WL#14411, Support for authentication_kerberos_client authentication plugin.

  - WL#14559, Deprecate TLS 1.0 and 1.1.

  - WL#14391, Migrate QA tests to main repo.

Version 8.0.25

  - This release contains no functional changes and is published to align the version number with the MySQL Server 8.0.25 release.

Version 8.0.24

  - Fix for Bug#102188 (32526663), AccessControlException with AuthenticationLdapSaslClientPlugin.

  - Fix for Bug#22508715, SETSESSIONMAXROWS() CALL ON CLOSED CONNECTION RESULTS IN NPE.

  - Fix for Bug#102131 (32338451), UPDATABLERESULTSET NPE WHEN USING DERIVED QUERIES OR VIEWS.

  - Fix for Bug#101596 (32151143), GET THE 'HOST' PROPERTY ERROR AFTER CALLING TRANSFORMPROPERTIES() METHOD.

  - Fix for Bug#20391832, SETOBJECT() FOR TYPES.TIME RESULTS IN EXCEPTION WHEN VALUE HAS FRACTIONAL PART.

  - Fix for Bug#97730 (31699993), xdev api: ConcurrentModificationException at Session.close.

  - Fix for Bug#99708 (31510398), mysql-connector-java 8.0.20 ASSERTION FAILED: Unknown message type: 57 s.close.

  - Fix for Bug#32122553, EXTRA BYTE IN COM_STMT_EXECUTE.

  - Fix for Bug#101558 (32141210), NULLPOINTEREXCEPTION WHEN EXECUTING INVALID QUERY WITH USEUSAGEADVISOR ENABLED.

  - Fix for Bug#102076 (32329915), CONTRIBUTION: MYSQL JDBC DRIVER RESULTSET.GETLONG() THROWS NUMBEROUTOFRANGE.

  - Fix for Bug#31747910, BUG 30474158 FIX IMPROVES JDBC COMPLIANCE BUT CHANGES DEFAULT RESULTSETTYPE HANDLING.

  - Fix for Bug#102321 (32405590), CALLING RESULTSETMETADATA.GETCOLUMNCLASSNAME RETURNS WRONG VALUE FOR DATETIME.

  - WL#14453, Pluggable authentication: new default behavior & user-less authentications.

  - WL#14392, Improve timeout error messages [classic].

  - WL#14202, XProtocol: Support connection close notification.

Version 8.0.23

  - Fix for Bug#21789378, FORCED TO SET SERVER TIMEZONE IN CONNECT STRING.
