@@ -3,6 +3,8 @@
 
 Version 8.0.26
 
+  - Fix for Bug#103303 (32766143), JAVA.LANG.CLASSCASTEXCEPTION WHEN INSERTING BLOB WITH SERVER PREPARED STATEMENT.
+
   - WL#14205, Support query attributes.
 
   - WL#14411, Support for authentication_kerberos_client authentication plugin.
